Mostly fixed text layout spacing

--- a/examples/harfbuzz.css
+++ b/examples/harfbuzz.css
@@ -6,7 +6,7 @@
     height: 200px;
     background-color: grey;
     color: white;
-    text-align: center;
+    text-align: left;
 }
 
 #devangari {
